--- a/exp/model/controlnet.yaml
+++ b/exp/model/controlnet.yaml
@@ -8,5 +8,8 @@ model:
   lr_eps: 1e-6
   lr_weight_decay: 1e-3
   cfg_dropout_prob: 0.1
+  controlnet_dropout_prob: 0.2
+  rms_window_size: 10000
+  low_pass_window_size: 2000
   depth_factor: 0.2
 
