--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,8 @@ seed: 12345
 ignore_warnings: True
 print_config: False # Prints tree with all configurations
 work_dir: ${hydra:runtime.cwd}  # This is the root of the project
-logs_dir: ${work_dir}${oc.env:DIR_LOGS}  # This is the root for all logs
+# logs_dir: ${work_dir}${oc.env:DIR_LOGS}  # This is the root for all logs
+logs_dir: /import/c4dm-datasets-ext/DIFF-SFX/logs/stablev2a  # This is the root for all logs
 data_dir: ${work_dir}${oc.env:DIR_DATA} # This is the root for all data
 ckpt_dir: ${logs_dir}/ckpts/${now:%Y-%m-%d-%H-%M-%S}
 # Hydra experiment configs log dir
