--- a/exp/train_gh_controlnet.yaml
+++ b/exp/train_gh_controlnet.yaml
@@ -12,25 +12,25 @@ datamodule:
   root_dir: /import/c4dm-datasets-ext/DIFF-SFX/GREATEST-HITS-DATASET/mic-mp4-processed-4fps-16kHz
 
   train_split_file_path: /import/c4dm-datasets-ext/DIFF-SFX/GREATEST-HITS-DATASET/mic-mp4-processed-4fps-16kHz/train.txt
-  train_data_to_use: 0.01
+  train_data_to_use: 1.0
   train_frames_transforms: null
 
   val_split_file_path: /import/c4dm-datasets-ext/DIFF-SFX/GREATEST-HITS-DATASET/mic-mp4-processed-4fps-16kHz/val.txt
-  val_data_to_use: 0.1
+  val_data_to_use: 1.0
   val_frames_transforms: null
 
   test_split_file_path: /import/c4dm-datasets-ext/DIFF-SFX/GREATEST-HITS-DATASET/mic-mp4-processed-4fps-16kHz/test.txt
-  test_data_to_use: 0.1
+  test_data_to_use: 1.0
   test_frames_transforms: null
   
-  chunk_length_in_seconds: 2.0
+  chunk_length_in_seconds: 10
   sr: 44100
   audio_file_suffix: .resampled.wav
   annotations_file_suffix: .times.csv
   metadata_file_suffix: .metadata.json
   frame_file_suffix: .jpg
   force_channels: stereo
-  batch_size: 1
+  batch_size: 12
   num_workers: 8
   pin_memory: True
 
@@ -74,6 +74,7 @@ trainer:
   devices: 1 # Set `1` to train on GPU, `0` to train on CPU only, and `-1` to train on all GPUs, default `0`
   precision: 16 # Precision used for tensors, default `32`
   accelerator: gpu # `ddp` GPUs train individually and sync gradients, default `None`
+  strategy: "ddp_find_unused_parameters_true" 
   gradient_clip_val: 1.0
   accumulate_grad_batches: 4
   min_epochs: 0
