--- a/requirements_aes.txt
+++ b/requirements_aes.txt
@@ -1,9 +1,11 @@
 absl-py==2.1.0
 accelerate==0.31.0
 addict==2.4.0
-aeiou
+aeiou==0.0.20
+aiobotocore==2.15.1
 aiofiles==23.2.1
 aiohttp==3.9.5
+aioitertools==0.12.0
 aiosignal==1.3.1
 alias-free-torch==0.0.6
 altair==5.3.0
@@ -21,6 +23,7 @@ auraloss==0.4.0
 backcall==0.2.0
 bleach==6.1.0
 bokeh==3.1.1
+botocore==1.35.23
 braceexpand==0.1.7
 Brotli==1.1.0
 cachetools==5.3.3
@@ -40,7 +43,7 @@ dctorch==0.1.2
 debugpy==1.8.5
 decorator==5.1.1
 descript-audio-codec==1.0.0
-descript-audiotools
+descript-audiotools==0.7.2
 dnspython==2.6.1
 docker-pycreds==0.4.0
 docstring_parser==0.16
@@ -58,6 +61,7 @@ ffmpeg-python==0.2.0
 ffmpy==0.3.2
 filelock==3.15.1
 fire==0.6.0
+flash-attn==2.6.3
 flatten-dict==0.4.2
 fonttools==4.53.0
 frozenlist==1.4.1
@@ -69,8 +73,8 @@ gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.30.0
 google-auth-oauthlib==1.0.0
-gradio==4.36.1
-gradio_client==1.0.1
+gradio==3.42.0
+gradio_client==0.5.0
 grpcio==1.64.1
 h11==0.14.0
 h5py==3.11.0
@@ -91,6 +95,7 @@ ipykernel==6.29.5
 ipython==8.12.3
 jedi==0.19.1
 Jinja2==3.1.4
+jmespath==1.0.1
 joblib==1.4.2
 jsonmerge==1.9.2
 jsonschema==4.22.0
@@ -102,9 +107,9 @@ k-diffusion==0.1.1
 kiwisolver==1.4.5
 kornia==0.7.2
 kornia_rs==0.1.3
-laion-clap
+laion-clap==1.1.4
 lazy_loader==0.4
-librosa
+librosa==0.9.2
 lightning-utilities==0.11.2
 linkify-it-py==2.0.3
 llvmlite==0.41.1
@@ -117,7 +122,7 @@ matplotlib==3.7.5
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.1
 mdurl==0.1.2
-mmcv==2.2.0
+mmcv==2.2.0 -f https://download.openmmlab.com/mmcv/dist/cu118/torch2.4/index.html
 mmengine==0.10.4
 mpmath==1.3.0
 msgpack==1.0.8
@@ -199,6 +204,7 @@ rich==13.7.1
 rpds-py==0.18.1
 rsa==4.9
 ruff==0.4.9
+s3fs==2024.6.0
 safetensors==0.4.3
 scikit-image==0.21.0
 scikit-learn==1.3.2
@@ -211,9 +217,9 @@ shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-soundfile
+SoundFile==0.10.2
 soxr==0.3.7
-stable-audio-tools
+stable-audio-tools==0.0.16
 stack-data==0.6.3
 starlette==0.37.2
 sympy==1.12.1
@@ -227,7 +233,7 @@ tokenizers==0.19.1
 tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.1
-torch
+torch==2.2.1
 torch-stoi==0.2.1
 torchaudio==2.2.1
 torchdiffeq==0.2.4
@@ -247,7 +253,7 @@ tzdata==2024.1
 uc-micro-py==1.0.3
 ujson==5.10.0
 umap-learn==0.5.6
-urllib3==2.2.2
+urllib3==1.26.20
 userpath==1.9.1
 uvicorn==0.30.1
 uvloop==0.19.0
@@ -258,12 +264,13 @@ watchfiles==0.22.0
 wcwidth==0.2.13
 webdataset==0.2.48
 webencodings==0.5.1
-websockets
+websockets==11.0.3
 Werkzeug==3.0.3
 wget==3.2
+wrapt==1.16.0
 x-transformers==1.26.6
 xyzservices==2024.6.0
 yapf==0.40.2
 yarl==1.9.4
-yt-dlp 
+yt-dlp==2023.11.16
 zipp==3.19.2
